--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -33,10 +33,9 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Dear ImGui Demo]
-Pos=235,19
-Size=1031,329
+Pos=452,253
+Size=571,324
 Collapsed=0
-DockId=0x00000007,1
 
 [Window][Scene View]
 Pos=0,350
@@ -196,9 +195,10 @@ Collapsed=0
 DockId=0x00000019,0
 
 [Window][World Outliner##2]
-Pos=830,43
-Size=247,321
+Pos=1013,19
+Size=247,658
 Collapsed=0
+DockId=0x0000001B,0
 
 [Window][World Outliner##3]
 Pos=520,132
@@ -211,17 +211,18 @@ Size=328,205
 Collapsed=0
 
 [Window][World Outliner##1]
-Pos=193,258
-Size=275,212
+Pos=985,19
+Size=275,658
 Collapsed=0
+DockId=0x0000001D,0
 
 [Window][Viewport##3]
-Pos=533,136
+Pos=690,63
 Size=257,188
 Collapsed=0
 
 [Window][World Outliner##4]
-Pos=108,250
+Pos=706,371
 Size=178,101
 Collapsed=0
 
@@ -238,6 +239,23 @@ Collapsed=0
 [Window][World Outliner##7]
 Pos=291,86
 Size=194,132
+Collapsed=0
+
+[Window][Inspector##3]
+Pos=0,19
+Size=262,658
+Collapsed=0
+DockId=0x0000001E,0
+
+[Window][Viewport##4]
+Pos=264,19
+Size=719,658
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][Inspector##5]
+Pos=119,426
+Size=239,226
 Collapsed=0
 
 [Table][0x861D378E,3]
@@ -309,31 +327,56 @@ Column 1  Width=70
 Column 2  Width=42
 Column 3  Weight=1.0000
 
+[Table][0xC9935533,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x8DFA6E86,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xFABAAEF7,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xA43C3885,3]
+RefScale=13
+Column 0  Width=56
+Column 1  Width=56
+Column 2  Width=56
+
 [Docking][Data]
-DockNode                  ID=0x0000000D Pos=167,249 Size=255,160 Split=X
-  DockNode                ID=0x0000000E Parent=0x0000000D SizeRef=111,111 Selected=0xFE574374
-  DockNode                ID=0x0000000F Parent=0x0000000D SizeRef=65,111 Split=Y Selected=0x84971014
-    DockNode              ID=0x00000018 Parent=0x0000000F SizeRef=261,199 Selected=0x84971014
-    DockNode              ID=0x00000019 Parent=0x0000000F SizeRef=261,200 Selected=0xB9F739A4
-DockSpace                 ID=0x8B93E3BD Window=0xA787BDB4 Pos=140,182 Size=1260,658 Split=X
-  DockNode                ID=0x00000010 Parent=0x8B93E3BD SizeRef=290,677 Selected=0xFE574374
-  DockNode                ID=0x00000017 Parent=0x8B93E3BD SizeRef=696,677 Split=Y
-    DockNode              ID=0x00000003 Parent=0x00000017 SizeRef=1266,329 Split=X
-      DockNode            ID=0x00000013 Parent=0x00000003 SizeRef=233,658 Split=Y Selected=0x60AF69E6
-        DockNode          ID=0x00000015 Parent=0x00000013 SizeRef=233,121 Selected=0x60AF69E6
-        DockNode          ID=0x00000016 Parent=0x00000013 SizeRef=233,239 Selected=0x0E07B13A
-      DockNode            ID=0x00000014 Parent=0x00000003 SizeRef=1025,658 Split=X
-        DockNode          ID=0x00000011 Parent=0x00000014 SizeRef=932,658 Split=X
-          DockNode        ID=0x00000001 Parent=0x00000011 SizeRef=822,658 Split=X
-            DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1078,658 Split=Y
-              DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=516,264 Split=X Selected=0xA7A5B14C
-                DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=557,325 Selected=0xA7A5B14C
-                DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=519,325 Selected=0xDA5AA401
-              DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=516,269 Split=X Selected=0xE005CB9C
-                DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=549,331 Selected=0xE005CB9C
-                DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=527,331 Selected=0x9AC598FC
-            DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=180,658 CentralNode=1 Selected=0xFE574374
-          DockNode        ID=0x00000002 Parent=0x00000011 SizeRef=245,658 Selected=0x199AB496
-        DockNode          ID=0x00000012 Parent=0x00000014 SizeRef=91,658 Selected=0x3C6695C2
-    DockNode              ID=0x0000000C Parent=0x00000017 SizeRef=1266,327 Selected=0x08AA43A5
+DockNode                        ID=0x0000000D Pos=167,249 Size=255,160 Split=X
+  DockNode                      ID=0x0000000E Parent=0x0000000D SizeRef=111,111 Selected=0xFE574374
+  DockNode                      ID=0x0000000F Parent=0x0000000D SizeRef=65,111 Split=Y Selected=0x84971014
+    DockNode                    ID=0x00000018 Parent=0x0000000F SizeRef=261,199 Selected=0x84971014
+    DockNode                    ID=0x00000019 Parent=0x0000000F SizeRef=261,200 Selected=0xB9F739A4
+DockSpace                       ID=0x8B93E3BD Window=0xA787BDB4 Pos=114,156 Size=1260,658 Split=X
+  DockNode                      ID=0x0000001E Parent=0x8B93E3BD SizeRef=262,658 Selected=0x46AD5C2D
+  DockNode                      ID=0x0000001F Parent=0x8B93E3BD SizeRef=996,658 Split=X
+    DockNode                    ID=0x0000001C Parent=0x0000001F SizeRef=983,658 Split=X
+      DockNode                  ID=0x0000001A Parent=0x0000001C SizeRef=1011,658 Split=X
+        DockNode                ID=0x00000010 Parent=0x0000001A SizeRef=290,677 Selected=0xFE574374
+        DockNode                ID=0x00000017 Parent=0x0000001A SizeRef=696,677 Split=Y
+          DockNode              ID=0x00000003 Parent=0x00000017 SizeRef=1266,329 Split=X
+            DockNode            ID=0x00000013 Parent=0x00000003 SizeRef=233,658 Split=Y Selected=0x60AF69E6
+              DockNode          ID=0x00000015 Parent=0x00000013 SizeRef=233,121 Selected=0x60AF69E6
+              DockNode          ID=0x00000016 Parent=0x00000013 SizeRef=233,239 Selected=0x0E07B13A
+            DockNode            ID=0x00000014 Parent=0x00000003 SizeRef=1025,658 Split=X
+              DockNode          ID=0x00000011 Parent=0x00000014 SizeRef=932,658 Split=X
+                DockNode        ID=0x00000001 Parent=0x00000011 SizeRef=822,658 Split=X
+                  DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1078,658 Split=Y
+                    DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=516,264 Split=X Selected=0xA7A5B14C
+                      DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=557,325 Selected=0xA7A5B14C
+                      DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=519,325 Selected=0xDA5AA401
+                    DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=516,269 Split=X Selected=0xE005CB9C
+                      DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=549,331 Selected=0xE005CB9C
+                      DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=527,331 Selected=0x9AC598FC
+                  DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=180,658 CentralNode=1 Selected=0xB1FAA9D4
+                DockNode        ID=0x00000002 Parent=0x00000011 SizeRef=245,658 Selected=0x199AB496
+              DockNode          ID=0x00000012 Parent=0x00000014 SizeRef=91,658 Selected=0x3C6695C2
+          DockNode              ID=0x0000000C Parent=0x00000017 SizeRef=1266,327 Selected=0x08AA43A5
+      DockNode                  ID=0x0000001B Parent=0x0000001C SizeRef=247,658 Selected=0x93757AC3
+    DockNode                    ID=0x0000001D Parent=0x0000001F SizeRef=275,658 Selected=0xD4D50013
 
