--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -33,9 +33,10 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Dear ImGui Demo]
-Pos=383,104
-Size=670,736
+Pos=1493,19
+Size=247,928
 Collapsed=0
+DockId=0x0000001B,1
 
 [Window][Scene View]
 Pos=0,350
@@ -47,7 +48,7 @@ DockId=0x0000000C,0
 Pos=235,19
 Size=1031,329
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000020,0
 
 [Window][World Outliner]
 Pos=25,19
@@ -195,8 +196,8 @@ Collapsed=0
 DockId=0x00000019,0
 
 [Window][World Outliner##2]
-Pos=1013,19
-Size=247,658
+Pos=1493,19
+Size=247,928
 Collapsed=0
 DockId=0x0000001B,0
 
@@ -211,10 +212,10 @@ Size=328,205
 Collapsed=0
 
 [Window][World Outliner##1]
-Pos=1465,19
-Size=275,928
+Pos=1493,19
+Size=247,928
 Collapsed=0
-DockId=0x0000001D,0
+DockId=0x0000001B,0
 
 [Window][Viewport##3]
 Pos=690,63
@@ -248,14 +249,15 @@ Collapsed=0
 DockId=0x0000001E,0
 
 [Window][Viewport##4]
-Pos=239,215
-Size=516,435
+Pos=212,81
+Size=844,648
 Collapsed=0
 
 [Window][Inspector##5]
-Pos=119,426
-Size=239,226
+Pos=0,19
+Size=238,928
 Collapsed=0
+DockId=0x00000022,0
 
 [Window][Delete?]
 Pos=714,414
@@ -273,9 +275,58 @@ Size=313,205
 Collapsed=0
 
 [Window][Inspector##4]
-Pos=22,368
-Size=437,371
+Pos=0,19
+Size=272,928
 Collapsed=0
+DockId=0x0000001C,0
+
+[Window][Editor Viewport##4]
+Pos=263,79
+Size=693,525
+Collapsed=0
+
+[Window][Game Viewport##4]
+Pos=878,19
+Size=613,928
+Collapsed=0
+DockId=0x00000021,0
+
+[Window][Editor Viewport##5]
+Pos=396,495
+Size=492,389
+Collapsed=0
+
+[Window][Game Viewport##5]
+Pos=1042,229
+Size=468,418
+Collapsed=0
+
+[Window][Editor Viewport##6]
+Pos=60,60
+Size=395,329
+Collapsed=0
+
+[Window][Game Viewport##6]
+Pos=979,62
+Size=460,389
+Collapsed=0
+
+[Window][Game Viewport##7]
+Pos=1010,351
+Size=570,516
+Collapsed=0
+
+[Window][Editor Viewport##1]
+Pos=170,19
+Size=1321,928
+Collapsed=0
+DockId=0x00000020,0
+
+[Window][Editor Viewport##3]
+Pos=240,19
+Size=636,928
+Collapsed=0
+DockId=0x00000020,0
 
 [Table][0x861D378E,3]
 Column 0  Weight=1.0000 Order=0
@@ -366,36 +417,40 @@ Column 1  Width=56
 Column 2  Width=56
 
 [Docking][Data]
-DockNode                        ID=0x0000000D Pos=167,249 Size=255,160 Split=X
-  DockNode                      ID=0x0000000E Parent=0x0000000D SizeRef=111,111 Selected=0xFE574374
-  DockNode                      ID=0x0000000F Parent=0x0000000D SizeRef=65,111 Split=Y Selected=0x84971014
-    DockNode                    ID=0x00000018 Parent=0x0000000F SizeRef=261,199 Selected=0x84971014
-    DockNode                    ID=0x00000019 Parent=0x0000000F SizeRef=261,200 Selected=0xB9F739A4
-DockSpace                       ID=0x8B93E3BD Window=0xA787BDB4 Pos=166,142 Size=1740,928 Split=X
-  DockNode                      ID=0x0000001E Parent=0x8B93E3BD SizeRef=262,658 Selected=0x46AD5C2D
-  DockNode                      ID=0x0000001F Parent=0x8B93E3BD SizeRef=996,658 Split=X
-    DockNode                    ID=0x0000001C Parent=0x0000001F SizeRef=983,658 Split=X
-      DockNode                  ID=0x0000001A Parent=0x0000001C SizeRef=1011,658 Split=X
-        DockNode                ID=0x00000010 Parent=0x0000001A SizeRef=290,677 Selected=0xFE574374
-        DockNode                ID=0x00000017 Parent=0x0000001A SizeRef=696,677 Split=Y
-          DockNode              ID=0x00000003 Parent=0x00000017 SizeRef=1266,329 Split=X
-            DockNode            ID=0x00000013 Parent=0x00000003 SizeRef=233,658 Split=Y Selected=0x60AF69E6
-              DockNode          ID=0x00000015 Parent=0x00000013 SizeRef=233,121 Selected=0x60AF69E6
-              DockNode          ID=0x00000016 Parent=0x00000013 SizeRef=233,239 Selected=0x0E07B13A
-            DockNode            ID=0x00000014 Parent=0x00000003 SizeRef=1025,658 Split=X
-              DockNode          ID=0x00000011 Parent=0x00000014 SizeRef=932,658 Split=X
-                DockNode        ID=0x00000001 Parent=0x00000011 SizeRef=822,658 Split=X
-                  DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1078,658 Split=Y
-                    DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=516,264 Split=X Selected=0xA7A5B14C
-                      DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=557,325 Selected=0xA7A5B14C
-                      DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=519,325 Selected=0xDA5AA401
-                    DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=516,269 Split=X Selected=0xE005CB9C
-                      DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=549,331 Selected=0xE005CB9C
-                      DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=527,331 Selected=0x9AC598FC
-                  DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=180,658 CentralNode=1 Selected=0xB1FAA9D4
-                DockNode        ID=0x00000002 Parent=0x00000011 SizeRef=245,658 Selected=0x199AB496
-              DockNode          ID=0x00000012 Parent=0x00000014 SizeRef=91,658 Selected=0x3C6695C2
-          DockNode              ID=0x0000000C Parent=0x00000017 SizeRef=1266,327 Selected=0x08AA43A5
-      DockNode                  ID=0x0000001B Parent=0x0000001C SizeRef=247,658 Selected=0x93757AC3
-    DockNode                    ID=0x0000001D Parent=0x0000001F SizeRef=275,658 Selected=0xD4D50013
+DockNode                          ID=0x0000000D Pos=167,249 Size=255,160 Split=X
+  DockNode                        ID=0x0000000E Parent=0x0000000D SizeRef=111,111 Selected=0xFE574374
+  DockNode                        ID=0x0000000F Parent=0x0000000D SizeRef=65,111 Split=Y Selected=0x84971014
+    DockNode                      ID=0x00000018 Parent=0x0000000F SizeRef=261,199 Selected=0x84971014
+    DockNode                      ID=0x00000019 Parent=0x0000000F SizeRef=261,200 Selected=0xB9F739A4
+DockSpace                         ID=0x8B93E3BD Window=0xA787BDB4 Pos=67,68 Size=1740,928 Split=X
+  DockNode                        ID=0x00000022 Parent=0x8B93E3BD SizeRef=238,928 Selected=0xC9EDA98D
+  DockNode                        ID=0x00000023 Parent=0x8B93E3BD SizeRef=1500,928 Split=X
+    DockNode                      ID=0x0000001C Parent=0x00000023 SizeRef=272,928 Selected=0xF48D803D
+    DockNode                      ID=0x0000001D Parent=0x00000023 SizeRef=1466,928 Split=X
+      DockNode                    ID=0x0000001E Parent=0x0000001D SizeRef=262,658 Selected=0x46AD5C2D
+      DockNode                    ID=0x0000001F Parent=0x0000001D SizeRef=996,658 Split=X
+        DockNode                  ID=0x0000001A Parent=0x0000001F SizeRef=1217,658 Split=X
+          DockNode                ID=0x00000010 Parent=0x0000001A SizeRef=290,677 Selected=0xFE574374
+          DockNode                ID=0x00000017 Parent=0x0000001A SizeRef=696,677 Split=Y
+            DockNode              ID=0x00000003 Parent=0x00000017 SizeRef=1266,329 Split=X
+              DockNode            ID=0x00000013 Parent=0x00000003 SizeRef=233,658 Split=Y Selected=0x60AF69E6
+                DockNode          ID=0x00000015 Parent=0x00000013 SizeRef=233,121 Selected=0x60AF69E6
+                DockNode          ID=0x00000016 Parent=0x00000013 SizeRef=233,239 Selected=0x0E07B13A
+              DockNode            ID=0x00000014 Parent=0x00000003 SizeRef=1025,658 Split=X
+                DockNode          ID=0x00000011 Parent=0x00000014 SizeRef=932,658 Split=X
+                  DockNode        ID=0x00000001 Parent=0x00000011 SizeRef=822,658 Split=X
+                    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1078,658 Split=Y
+                      DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=516,264 Split=X Selected=0xA7A5B14C
+                        DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=557,325 Selected=0xA7A5B14C
+                        DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=519,325 Selected=0xDA5AA401
+                      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=516,269 Split=X Selected=0xE005CB9C
+                        DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=549,331 Selected=0xE005CB9C
+                        DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=527,331 Selected=0x9AC598FC
+                    DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=180,658 Split=X Selected=0x7C2A879A
+                      DockNode    ID=0x00000020 Parent=0x00000007 SizeRef=636,928 CentralNode=1 Selected=0x7C2A879A
+                      DockNode    ID=0x00000021 Parent=0x00000007 SizeRef=613,928 Selected=0x853AEA1B
+                  DockNode        ID=0x00000002 Parent=0x00000011 SizeRef=245,658 Selected=0x199AB496
+                DockNode          ID=0x00000012 Parent=0x00000014 SizeRef=91,658 Selected=0x3C6695C2
+            DockNode              ID=0x0000000C Parent=0x00000017 SizeRef=1266,327 Selected=0x08AA43A5
+        DockNode                  ID=0x0000001B Parent=0x0000001F SizeRef=247,658 Selected=0xD4D50013
 
