--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -33,8 +33,8 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Dear ImGui Demo]
-Pos=1509,19
-Size=231,735
+Pos=1085,19
+Size=655,733
 Collapsed=0
 DockId=0x0000001B,1
 
@@ -69,8 +69,7 @@ Size=607,944
 Collapsed=0
 
 [Window][Example: Simple layout]
-ViewportPos=76,132
-ViewportId=0x32FFF4A6
+Pos=14,47
 Size=500,440
 Collapsed=0
 
@@ -126,7 +125,7 @@ Size=348,326
 Collapsed=0
 
 [Window][Example: Property editor]
-Pos=60,60
+Pos=60,59
 Size=430,450
 Collapsed=0
 
@@ -212,8 +211,8 @@ Size=328,205
 Collapsed=0
 
 [Window][World Outliner##1]
-Pos=1509,19
-Size=231,735
+Pos=1085,19
+Size=655,733
 Collapsed=0
 DockId=0x0000001B,0
 
@@ -276,7 +275,7 @@ Collapsed=0
 
 [Window][Inspector##4]
 Pos=0,19
-Size=272,928
+Size=272,733
 Collapsed=0
 DockId=0x0000001C,0
 
@@ -325,8 +324,8 @@ Collapsed=0
 DockId=0x00000026,0
 
 [Window][Editor Viewport##3]
-Pos=258,19
-Size=645,735
+Pos=274,19
+Size=809,733
 Collapsed=0
 DockId=0x00000026,0
 
@@ -339,6 +338,22 @@ DockId=0x00000029,0
 [Window][Example: Console]
 Pos=61,60
 Size=520,600
+Collapsed=0
+
+[Window][Console##5]
+Pos=0,754
+Size=1740,193
+Collapsed=0
+DockId=0x0000002B,0
+
+[Window][Dear ImGui Debug Log]
+Pos=60,60
+Size=708,156
+Collapsed=0
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=60,60
+Size=339,307
 Collapsed=0
 
 [Table][0x861D378E,3]
@@ -430,46 +445,48 @@ Column 1  Width=56
 Column 2  Width=56
 
 [Docking][Data]
-DockNode                              ID=0x0000000D Pos=167,249 Size=255,160 Split=X
-  DockNode                            ID=0x0000000E Parent=0x0000000D SizeRef=111,111 Selected=0xFE574374
-  DockNode                            ID=0x0000000F Parent=0x0000000D SizeRef=65,111 Split=Y Selected=0x84971014
-    DockNode                          ID=0x00000018 Parent=0x0000000F SizeRef=261,199 Selected=0x84971014
-    DockNode                          ID=0x00000019 Parent=0x0000000F SizeRef=261,200 Selected=0xB9F739A4
-DockSpace                             ID=0x8B93E3BD Window=0xA787BDB4 Pos=45,67 Size=1740,928 Split=Y
-  DockNode                            ID=0x00000028 Parent=0x8B93E3BD SizeRef=1740,735 Split=X
-    DockNode                          ID=0x00000022 Parent=0x00000028 SizeRef=256,928 Selected=0xC9EDA98D
-    DockNode                          ID=0x00000023 Parent=0x00000028 SizeRef=1278,928 Split=X
-      DockNode                        ID=0x0000001C Parent=0x00000023 SizeRef=272,928 Selected=0xF48D803D
-      DockNode                        ID=0x0000001D Parent=0x00000023 SizeRef=1466,928 Split=X
-        DockNode                      ID=0x0000001E Parent=0x0000001D SizeRef=262,658 Selected=0x46AD5C2D
-        DockNode                      ID=0x0000001F Parent=0x0000001D SizeRef=996,658 Split=X
-          DockNode                    ID=0x0000001A Parent=0x0000001F SizeRef=1045,658 Split=X
-            DockNode                  ID=0x00000010 Parent=0x0000001A SizeRef=290,677 Selected=0xFE574374
-            DockNode                  ID=0x00000017 Parent=0x0000001A SizeRef=696,677 Split=Y
-              DockNode                ID=0x00000003 Parent=0x00000017 SizeRef=1266,329 Split=X
-                DockNode              ID=0x00000013 Parent=0x00000003 SizeRef=233,658 Split=Y Selected=0x60AF69E6
-                  DockNode            ID=0x00000015 Parent=0x00000013 SizeRef=233,121 Selected=0x60AF69E6
-                  DockNode            ID=0x00000016 Parent=0x00000013 SizeRef=233,239 Selected=0x0E07B13A
-                DockNode              ID=0x00000014 Parent=0x00000003 SizeRef=1025,658 Split=X
-                  DockNode            ID=0x00000011 Parent=0x00000014 SizeRef=932,658 Split=X
-                    DockNode          ID=0x00000001 Parent=0x00000011 SizeRef=822,658 Split=X
-                      DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=1078,658 Split=Y
-                        DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=516,264 Split=X Selected=0xA7A5B14C
-                          DockNode    ID=0x00000008 Parent=0x00000005 SizeRef=557,325 Selected=0xA7A5B14C
-                          DockNode    ID=0x00000009 Parent=0x00000005 SizeRef=519,325 Selected=0xDA5AA401
-                        DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=516,269 Split=X Selected=0xE005CB9C
-                          DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=549,331 Selected=0xE005CB9C
-                          DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=527,331 Selected=0x9AC598FC
-                      DockNode        ID=0x00000007 Parent=0x00000001 SizeRef=180,658 Split=X Selected=0x7C2A879A
-                        DockNode      ID=0x00000020 Parent=0x00000007 SizeRef=423,928 Split=Y Selected=0x7C2A879A
-                          DockNode    ID=0x00000024 Parent=0x00000020 SizeRef=649,464 Split=X Selected=0x7C2A879A
-                            DockNode  ID=0x00000026 Parent=0x00000024 SizeRef=441,928 CentralNode=1 Selected=0x7C2A879A
-                            DockNode  ID=0x00000027 Parent=0x00000024 SizeRef=602,928 Selected=0x853AEA1B
-                          DockNode    ID=0x00000025 Parent=0x00000020 SizeRef=649,462 Selected=0xB4CA08EA
-                        DockNode      ID=0x00000021 Parent=0x00000007 SizeRef=826,928 Selected=0x853AEA1B
-                    DockNode          ID=0x00000002 Parent=0x00000011 SizeRef=245,658 Selected=0x199AB496
-                  DockNode            ID=0x00000012 Parent=0x00000014 SizeRef=91,658 Selected=0x3C6695C2
-              DockNode                ID=0x0000000C Parent=0x00000017 SizeRef=1266,327 Selected=0x08AA43A5
-          DockNode                    ID=0x0000001B Parent=0x0000001F SizeRef=231,658 Selected=0xD4D50013
-  DockNode                            ID=0x00000029 Parent=0x8B93E3BD SizeRef=1740,191 Selected=0x987D6D0B
+DockNode                                ID=0x0000000D Pos=167,249 Size=255,160 Split=X
+  DockNode                              ID=0x0000000E Parent=0x0000000D SizeRef=111,111 Selected=0xFE574374
+  DockNode                              ID=0x0000000F Parent=0x0000000D SizeRef=65,111 Split=Y Selected=0x84971014
+    DockNode                            ID=0x00000018 Parent=0x0000000F SizeRef=261,199 Selected=0x84971014
+    DockNode                            ID=0x00000019 Parent=0x0000000F SizeRef=261,200 Selected=0xB9F739A4
+DockSpace                               ID=0x8B93E3BD Window=0xA787BDB4 Pos=36,78 Size=1740,928 Split=Y
+  DockNode                              ID=0x0000002A Parent=0x8B93E3BD SizeRef=1740,733 Split=Y
+    DockNode                            ID=0x00000028 Parent=0x0000002A SizeRef=1740,735 Split=X
+      DockNode                          ID=0x00000022 Parent=0x00000028 SizeRef=256,928 Selected=0xC9EDA98D
+      DockNode                          ID=0x00000023 Parent=0x00000028 SizeRef=1278,928 Split=X
+        DockNode                        ID=0x0000001C Parent=0x00000023 SizeRef=272,928 Selected=0xF48D803D
+        DockNode                        ID=0x0000001D Parent=0x00000023 SizeRef=1466,928 Split=X
+          DockNode                      ID=0x0000001E Parent=0x0000001D SizeRef=262,658 Selected=0x46AD5C2D
+          DockNode                      ID=0x0000001F Parent=0x0000001D SizeRef=996,658 Split=X
+            DockNode                    ID=0x0000001A Parent=0x0000001F SizeRef=809,658 Split=X
+              DockNode                  ID=0x00000010 Parent=0x0000001A SizeRef=290,677 Selected=0xFE574374
+              DockNode                  ID=0x00000017 Parent=0x0000001A SizeRef=696,677 Split=Y
+                DockNode                ID=0x00000003 Parent=0x00000017 SizeRef=1266,329 Split=X
+                  DockNode              ID=0x00000013 Parent=0x00000003 SizeRef=233,658 Split=Y Selected=0x60AF69E6
+                    DockNode            ID=0x00000015 Parent=0x00000013 SizeRef=233,121 Selected=0x60AF69E6
+                    DockNode            ID=0x00000016 Parent=0x00000013 SizeRef=233,239 Selected=0x0E07B13A
+                  DockNode              ID=0x00000014 Parent=0x00000003 SizeRef=1025,658 Split=X
+                    DockNode            ID=0x00000011 Parent=0x00000014 SizeRef=932,658 Split=X
+                      DockNode          ID=0x00000001 Parent=0x00000011 SizeRef=822,658 Split=X
+                        DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=1078,658 Split=Y
+                          DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=516,264 Split=X Selected=0xA7A5B14C
+                            DockNode    ID=0x00000008 Parent=0x00000005 SizeRef=557,325 Selected=0xA7A5B14C
+                            DockNode    ID=0x00000009 Parent=0x00000005 SizeRef=519,325 Selected=0xDA5AA401
+                          DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=516,269 Split=X Selected=0xE005CB9C
+                            DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=549,331 Selected=0xE005CB9C
+                            DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=527,331 Selected=0x9AC598FC
+                        DockNode        ID=0x00000007 Parent=0x00000001 SizeRef=180,658 Split=X Selected=0x7C2A879A
+                          DockNode      ID=0x00000020 Parent=0x00000007 SizeRef=423,928 Split=Y Selected=0x7C2A879A
+                            DockNode    ID=0x00000024 Parent=0x00000020 SizeRef=649,464 Split=X Selected=0x7C2A879A
+                              DockNode  ID=0x00000026 Parent=0x00000024 SizeRef=441,928 CentralNode=1 Selected=0x7C2A879A
+                              DockNode  ID=0x00000027 Parent=0x00000024 SizeRef=602,928 Selected=0x853AEA1B
+                            DockNode    ID=0x00000025 Parent=0x00000020 SizeRef=649,462 Selected=0xB4CA08EA
+                          DockNode      ID=0x00000021 Parent=0x00000007 SizeRef=826,928 Selected=0x853AEA1B
+                      DockNode          ID=0x00000002 Parent=0x00000011 SizeRef=245,658 Selected=0x199AB496
+                    DockNode            ID=0x00000012 Parent=0x00000014 SizeRef=91,658 Selected=0x3C6695C2
+                DockNode                ID=0x0000000C Parent=0x00000017 SizeRef=1266,327 Selected=0x08AA43A5
+            DockNode                    ID=0x0000001B Parent=0x0000001F SizeRef=655,658 Selected=0xD4D50013
+    DockNode                            ID=0x00000029 Parent=0x0000002A SizeRef=1740,191 Selected=0x987D6D0B
+  DockNode                              ID=0x0000002B Parent=0x8B93E3BD SizeRef=1740,193 Selected=0xDFDD17DB
 
