--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -33,8 +33,8 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Dear ImGui Demo]
-Pos=1085,19
-Size=655,733
+Pos=1426,19
+Size=314,715
 Collapsed=0
 DockId=0x0000001B,1
 
@@ -211,8 +211,8 @@ Size=328,205
 Collapsed=0
 
 [Window][World Outliner##1]
-Pos=1085,19
-Size=655,733
+Pos=1426,19
+Size=314,715
 Collapsed=0
 DockId=0x0000001B,0
 
@@ -243,7 +243,7 @@ Collapsed=0
 
 [Window][Inspector##3]
 Pos=0,19
-Size=262,928
+Size=262,715
 Collapsed=0
 DockId=0x0000001E,0
 
@@ -291,20 +291,22 @@ Collapsed=0
 DockId=0x00000027,0
 
 [Window][Editor Viewport##5]
-Pos=396,495
-Size=492,389
+Pos=264,19
+Size=1160,715
 Collapsed=0
+DockId=0x00000026,0
 
 [Window][Game Viewport##5]
-Pos=1042,229
-Size=468,418
+Pos=1392,19
+Size=32,823
 Collapsed=0
+DockId=0x00000021,1
 
 [Window][Editor Viewport##6]
-Pos=361,379
-Size=926,462
+Pos=264,19
+Size=1126,823
 Collapsed=0
-DockId=0x00000025,0
+DockId=0x00000026,0
 
 [Window][Game Viewport##6]
 Pos=979,62
@@ -312,8 +314,8 @@ Size=460,389
 Collapsed=0
 
 [Window][Game Viewport##7]
-Pos=891,485
-Size=600,462
+Pos=1392,19
+Size=32,823
 Collapsed=0
 DockId=0x00000021,0
 
@@ -355,6 +357,12 @@ Collapsed=0
 Pos=60,60
 Size=339,307
 Collapsed=0
+
+[Window][Console##4]
+Pos=0,736
+Size=1740,211
+Collapsed=0
+DockId=0x0000002D,0
 
 [Table][0x861D378E,3]
 Column 0  Weight=1.0000 Order=0
@@ -450,43 +458,43 @@ DockNode                                ID=0x0000000D Pos=167,249 Size=255,160 S
   DockNode                              ID=0x0000000F Parent=0x0000000D SizeRef=65,111 Split=Y Selected=0x84971014
     DockNode                            ID=0x00000018 Parent=0x0000000F SizeRef=261,199 Selected=0x84971014
     DockNode                            ID=0x00000019 Parent=0x0000000F SizeRef=261,200 Selected=0xB9F739A4
-DockSpace                               ID=0x8B93E3BD Window=0xA787BDB4 Pos=36,78 Size=1740,928 Split=Y
-  DockNode                              ID=0x0000002A Parent=0x8B93E3BD SizeRef=1740,733 Split=Y
-    DockNode                            ID=0x00000028 Parent=0x0000002A SizeRef=1740,735 Split=X
-      DockNode                          ID=0x00000022 Parent=0x00000028 SizeRef=256,928 Selected=0xC9EDA98D
-      DockNode                          ID=0x00000023 Parent=0x00000028 SizeRef=1278,928 Split=X
-        DockNode                        ID=0x0000001C Parent=0x00000023 SizeRef=272,928 Selected=0xF48D803D
-        DockNode                        ID=0x0000001D Parent=0x00000023 SizeRef=1466,928 Split=X
-          DockNode                      ID=0x0000001E Parent=0x0000001D SizeRef=262,658 Selected=0x46AD5C2D
-          DockNode                      ID=0x0000001F Parent=0x0000001D SizeRef=996,658 Split=X
-            DockNode                    ID=0x0000001A Parent=0x0000001F SizeRef=809,658 Split=X
-              DockNode                  ID=0x00000010 Parent=0x0000001A SizeRef=290,677 Selected=0xFE574374
-              DockNode                  ID=0x00000017 Parent=0x0000001A SizeRef=696,677 Split=Y
-                DockNode                ID=0x00000003 Parent=0x00000017 SizeRef=1266,329 Split=X
-                  DockNode              ID=0x00000013 Parent=0x00000003 SizeRef=233,658 Split=Y Selected=0x60AF69E6
-                    DockNode            ID=0x00000015 Parent=0x00000013 SizeRef=233,121 Selected=0x60AF69E6
-                    DockNode            ID=0x00000016 Parent=0x00000013 SizeRef=233,239 Selected=0x0E07B13A
-                  DockNode              ID=0x00000014 Parent=0x00000003 SizeRef=1025,658 Split=X
-                    DockNode            ID=0x00000011 Parent=0x00000014 SizeRef=932,658 Split=X
-                      DockNode          ID=0x00000001 Parent=0x00000011 SizeRef=822,658 Split=X
-                        DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=1078,658 Split=Y
-                          DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=516,264 Split=X Selected=0xA7A5B14C
-                            DockNode    ID=0x00000008 Parent=0x00000005 SizeRef=557,325 Selected=0xA7A5B14C
-                            DockNode    ID=0x00000009 Parent=0x00000005 SizeRef=519,325 Selected=0xDA5AA401
-                          DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=516,269 Split=X Selected=0xE005CB9C
-                            DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=549,331 Selected=0xE005CB9C
-                            DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=527,331 Selected=0x9AC598FC
-                        DockNode        ID=0x00000007 Parent=0x00000001 SizeRef=180,658 Split=X Selected=0x7C2A879A
-                          DockNode      ID=0x00000020 Parent=0x00000007 SizeRef=423,928 Split=Y Selected=0x7C2A879A
-                            DockNode    ID=0x00000024 Parent=0x00000020 SizeRef=649,464 Split=X Selected=0x7C2A879A
-                              DockNode  ID=0x00000026 Parent=0x00000024 SizeRef=441,928 CentralNode=1 Selected=0x7C2A879A
-                              DockNode  ID=0x00000027 Parent=0x00000024 SizeRef=602,928 Selected=0x853AEA1B
-                            DockNode    ID=0x00000025 Parent=0x00000020 SizeRef=649,462 Selected=0xB4CA08EA
-                          DockNode      ID=0x00000021 Parent=0x00000007 SizeRef=826,928 Selected=0x853AEA1B
-                      DockNode          ID=0x00000002 Parent=0x00000011 SizeRef=245,658 Selected=0x199AB496
-                    DockNode            ID=0x00000012 Parent=0x00000014 SizeRef=91,658 Selected=0x3C6695C2
-                DockNode                ID=0x0000000C Parent=0x00000017 SizeRef=1266,327 Selected=0x08AA43A5
-            DockNode                    ID=0x0000001B Parent=0x0000001F SizeRef=655,658 Selected=0xD4D50013
-    DockNode                            ID=0x00000029 Parent=0x0000002A SizeRef=1740,191 Selected=0x987D6D0B
-  DockNode                              ID=0x0000002B Parent=0x8B93E3BD SizeRef=1740,193 Selected=0xDFDD17DB
+DockSpace                               ID=0x8B93E3BD Window=0xA787BDB4 Pos=95,90 Size=1740,928 Split=Y
+  DockNode                              ID=0x0000002C Parent=0x8B93E3BD SizeRef=1740,715 Split=Y
+    DockNode                            ID=0x0000002A Parent=0x0000002C SizeRef=1740,733 Split=Y
+      DockNode                          ID=0x00000028 Parent=0x0000002A SizeRef=1740,735 Split=X
+        DockNode                        ID=0x00000022 Parent=0x00000028 SizeRef=256,928 Selected=0xC9EDA98D
+        DockNode                        ID=0x00000023 Parent=0x00000028 SizeRef=1278,928 Split=X
+          DockNode                      ID=0x0000001C Parent=0x00000023 SizeRef=272,928 Selected=0xF48D803D
+          DockNode                      ID=0x0000001D Parent=0x00000023 SizeRef=1466,928 Split=X
+            DockNode                    ID=0x0000001E Parent=0x0000001D SizeRef=262,658 Selected=0x46AD5C2D
+            DockNode                    ID=0x0000001F Parent=0x0000001D SizeRef=996,658 Split=X
+              DockNode                  ID=0x0000001A Parent=0x0000001F SizeRef=1160,658 Split=X
+                DockNode                ID=0x00000010 Parent=0x0000001A SizeRef=290,677 Selected=0xFE574374
+                DockNode                ID=0x00000017 Parent=0x0000001A SizeRef=696,677 Split=Y
+                  DockNode              ID=0x00000003 Parent=0x00000017 SizeRef=1266,329 Split=X
+                    DockNode            ID=0x00000013 Parent=0x00000003 SizeRef=233,658 Split=Y Selected=0x60AF69E6
+                      DockNode          ID=0x00000015 Parent=0x00000013 SizeRef=233,121 Selected=0x60AF69E6
+                      DockNode          ID=0x00000016 Parent=0x00000013 SizeRef=233,239 Selected=0x0E07B13A
+                    DockNode            ID=0x00000014 Parent=0x00000003 SizeRef=1025,658 Split=X
+                      DockNode          ID=0x00000011 Parent=0x00000014 SizeRef=932,658 Split=X
+                        DockNode        ID=0x00000001 Parent=0x00000011 SizeRef=822,658 Split=X
+                          DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1078,658 Split=Y
+                            DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=516,264 Split=X Selected=0xA7A5B14C
+                              DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=557,325 Selected=0xA7A5B14C
+                              DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=519,325 Selected=0xDA5AA401
+                            DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=516,269 Split=X Selected=0xE005CB9C
+                              DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=549,331 Selected=0xE005CB9C
+                              DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=527,331 Selected=0x9AC598FC
+                          DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=180,658 Split=X Selected=0x7C2A879A
+                            DockNode    ID=0x00000020 Parent=0x00000007 SizeRef=1126,928 Split=X Selected=0x7C2A879A
+                              DockNode  ID=0x00000026 Parent=0x00000020 SizeRef=441,928 CentralNode=1 Selected=0xF36A723A
+                              DockNode  ID=0x00000027 Parent=0x00000020 SizeRef=602,928 Selected=0x853AEA1B
+                            DockNode    ID=0x00000021 Parent=0x00000007 SizeRef=32,928 Selected=0xB85AC3AB
+                        DockNode        ID=0x00000002 Parent=0x00000011 SizeRef=245,658 Selected=0x199AB496
+                      DockNode          ID=0x00000012 Parent=0x00000014 SizeRef=91,658 Selected=0x3C6695C2
+                  DockNode              ID=0x0000000C Parent=0x00000017 SizeRef=1266,327 Selected=0x08AA43A5
+              DockNode                  ID=0x0000001B Parent=0x0000001F SizeRef=314,658 Selected=0xD4D50013
+      DockNode                          ID=0x00000029 Parent=0x0000002A SizeRef=1740,191 Selected=0x987D6D0B
+    DockNode                            ID=0x0000002B Parent=0x0000002C SizeRef=1740,193 Selected=0xDFDD17DB
+  DockNode                              ID=0x0000002D Parent=0x8B93E3BD SizeRef=1740,211 Selected=0xE2BD3E6B
 
